<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_meals"
            android:icon="@drawable/ic_vector_meal_view"
            android:title="Kalkulator żywieniowy" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_vector_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipe"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_ingredients"
            android:icon="@drawable/ic_fruits"
            android:title="@string/ingredients" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/ic_vector_basket"
            android:title="Lista zakupów" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_vector_profile"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_vector_settings"
            android:title="@string/settings" />
    </group>

    <item
        android:title="Informacje">
        <menu>
            <item
                android:id="@+id/nav_specialist"
                android:icon="@drawable/ic_vector_specialist"
                android:title="Specjaliści" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_vector_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_vector_sign_out"
                android:title="Wyloguj się" />
        </menu>
    </item>



</menu>