<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".RegistrationActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="10dp"
                    android:paddingHorizontal="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/app_logo" />

                    <TextView
                        android:id="@+id/header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_centerHorizontal="true"
                        android:text="@string/app_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="46sp"
                        app:fontFamily="@font/comfortaa_light" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorGray"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etName_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_text"
                        android:inputType="textPersonName"
                        android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_text"
                        android:inputType="textEmailAddress"
                        android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPassword_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text"
                        android:inputType="textPassword"
                        android:textSize="18sp"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text_2"
                        android:inputType="textPassword"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/btn_regulations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regulations_text"
                        android:textColor="@color/colorGray"
                        android:buttonTint="@color/colorPrimary"/>

                    <TextView
                        android:id="@+id/textViewRegulationHyperlink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(Regulamin)"
                        android:layout_marginLeft="5dp"
                        android:clickable="true"
                        android:layout_toRightOf="@id/btn_regulations"
                        android:layout_centerVertical="true"
                        android:autoLink="all"
                        android:textColor="@color/colorPrimary"/>



                </RelativeLayout>


                <TextView
                    android:id="@+id/textView_Info"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:text="none"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:visibility="invisible"/>

                <android.support.design.button.MaterialButton
                    app:cornerRadius="25dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_width="200dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:id="@+id/btn_registration"
                    android:onClick="sendRegistration"
                    android:text="@string/register_button"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_margin="16dp"
                    android:enabled="false"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#acacac"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Masz już konto?"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp"
                        android:background="#FFF"
                        android:layout_centerInParent="true"
                        android:paddingHorizontal="10dp" />


                </RelativeLayout>

                <android.support.design.button.MaterialButton
                    android:id="@+id/buttonSignIn"
                    android:layout_margin="16dp"
                    android:layout_gravity="center"
                    app:cornerRadius="25dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:layout_width="200dp"
                    android:layout_height="56dp"
                    android:background="@drawable/button_style"
                    android:text="@string/zaloguj_text"
                    android:textColor="#FFF"
                    android:textSize="18sp"
                    android:textAllCaps="false" />

            </LinearLayout>

</android.support.v4.widget.NestedScrollView>
